# thething

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE_TYPES.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  bug_form.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_form.yml  feature_request.yml
.github/workflows/: actions-usage.yml  autoformat.yml  codespell.yml  create-recurring-issue.yml  dependabot-automerge.yml  dependabot_automerge.yml  dependabot_pr.yml  docker-alpine.yml  docker-spark.yml  download-url.yml  env-vars-example.yml  esm-script-runner.yml  generate-license.yml  gh-runner-check.yml  label-issues.yml  labeler.yml  learn-github-actions.yml  list-issues.yml  manual.yml  npm-script-runner.yml  on-issue-opened.yml  on-pull-request-target.yml  rag-runner.yml  ruff-bot.yml  sample-matrix.yml  scan-repo.yml  script-runner.yml  stale-repos.yml  test-ci.yml  validate-actions.yml
.github/workflows/bash/: validate-bash.yml
.github/workflows/dependabot/: dependabot_automerge.yml
.github/workflows/scripts/: async_script.js  print-stuff.js  script.js
.github/workflows/spelling/: codespell.yml
tests/: README.md  conftest.py
tests/unit/: test_mypython.py  test_thething.py
thething/: README.md  __init__.py  cython_magics.ipynb  mypython.py
