# TODO(AS): Upgrade to uv packaging
[tool.poetry]
name = "thething"
version = "0.1.0"
description = "The thing python example"
authors = ["Andrew Sears"]
maintainers = ["Andrew Sears"]

readme = "README.md"
packages = [{include = "thething", from = "thething"}]
license = "MIT"
repository = "https://github.com/asears/thething"

# classifiers = [
#    "Topic :: Software Development :: Build Tools",
#    "Topic :: Software Development :: Libraries :: Python Modules"
# ]
# homepage = "https://python-poetry.org/"
# documentation = "https://python-poetry.org/docs/"
# keywords = ["packaging", "poetry"]
# include = ["CHANGELOG.md"]

# [[tool.poetry.source]]
# name = "private"
# url = "http://example.com/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
# thething = {path = "./thething", develop = true}

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
ruff = "*"
invoke = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/asears/thething/issues"

# [[tool.poetry.source]]
# name = "azure"
# url = "https://pkgs.dev.azure.com/{org}/{project}/_packaging/private-sources/pypi/simple/"
# secondary = true

[tool.pytest]

[tool.ruff]
# for a mono repo or similar experience 
# to .flake8 traversing up folders to find its config
# extend = "../pyproject.toml"
extend-include = ["*.ipynb"]

# wemakestylepython/flake8hell settings
# E,F,W,C90,I,N,D,UP,YTT,ANN,ASYNC,
# S,BLE,FBT,B,A,COM,CPY,C4,DTZ,T10,DJ,EM,EXE,FA,ISC,ICN,G,
# INP,PIE,T20,PYI,PT,Q,RSE,RET,SLF,SLOT,SIM,TID,TCH,INT,ARG,
# PTH,TD,FIX,ERA,PD,PGH,PL,TRY,FLY,NPY,AIR,PERF,FURB,LOG,RUF

# all except airflow, django
# E,F,W,C90,I,N,D,UP,YTT,ANN,ASYNC,S,BLE,FBT,B,A,COM,CPY,C4,DTZ,
# T10,EM,EXE,FA,ISC,ICN,G,INP,PIE,T20,PYI,PT,Q,RSE,RET,SLF,SLOT,
# SIM,TID,TCH,INT,ARG,PTH,TD,FIX,ERA,PD,PGH,PL,TRY,FLY,NPY,PERF,
# FURB,LOG,RUF,TRIO

# all except airflow, django, todos, fixmes, 
# flake8-simplify  (simplify may autofix some issues with incorrect results
# FURB,LOG,RUF,TRIO and some others are WIP or require preview flag
# E,F,W,C90,I,N,D,UP,YTT,ANN,ASYNC,S,BLE,FBT,B,A,COM,CPY,C4,DTZ,T10,
# EM,EXE,FA,ISC,ICN,G,INP,PIE,T20,PYI,PT,Q,RSE,RET,SLF,SLOT,TID,TCH,
# INT,ARG,PTH,ERA,PD,PGH,PL,TRY,FLY,NPY,PERF,FURB,LOG,RUF,TRIO

select = [
    "E",
    "F",
    "S",
    "RUF",
]
ignore = ["F401"]

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true
exclude = ["*.pyi"]
# To exclude notebooks from format
# exclude = ["*.ipynb"]
